--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ asgiref==3.5.2
 autopep8==1.6.0
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.11.1
+dj-database-url==0.5.0
 Django==4.0.4
 django-bootstrap-v5==1.0.11
 django-bootstrap3==21.2
+django-bootstrap5==21.3
+django-heroku==0.3.1
 Pillow==9.1.1
 psycopg2==2.9.3
 pycodestyle==2.8.0
@@ -12,3 +15,4 @@ pytz==2022.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 toml==0.10.2
+whitenoise==6.1.0
