--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-bootstrap-v5==1.0.11
 django-bootstrap3==21.2
 django-bootstrap5==21.3
 django-heroku==0.3.1
+gunicorn==20.1.0
 Pillow==9.1.1
 psycopg2==2.9.3
 pycodestyle==2.8.0
