--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ gunicorn==20.1.0
 Pillow==9.1.1
 psycopg2==2.9.3
 pycodestyle==2.8.0
+python-decouple==3.1
 pytz==2022.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
